---------------------------------------------------------------------------------------------------
Version: 0.0.45
Date: 17/11/2019
  Changes:
    - The Mobile Factory can now be removed and replaced, but it will lose all it's Shield, Energy and Jump Drive charge
  Scripting:
    - Rewrite for the placed/removed/destroyed Entities
    - Rewrite for the Mobile Factory object
  Bugfixes:
    - Energy lasers are now correctly Activated/Desactivated
    - Fixed a crash when all technologies were unlocked in the same time in sandbox mod
    - Fixed a crash that occurred when Mobile Factory surfaces technologies were unlocked but the Mobile Factory was not yet placed
    - Fixed the "Factory surface lost" bug
---------------------------------------------------------------------------------------------------
Version: 0.0.44
Date: 17/11/2019
  Graphics:
    - Massive graphics change for the Ore Cleaner
  Changes:
    - Added 30 tiles to all Mobile Factory Weapons
    - Tweaked the Ore Cleaner extraction (Now it's 10/s multiplied per the purity)
    - The Power Drain Pole can now be used when the Internal Distribution is activated
    - Changed the Dimensional Accumulator, it now have a buffer capacity of 5MJ (was 1MJ), an input/output flow limite of 1MW (was 300kW)
    - To avoid problems, the Mobile Factory Energy Drain Laser will only drain energy from accumulators
  Bugfixes:
    - Fixed grid content was removed when the Mobile Factory was teleported between surface
    - Fixed a crash related to the polution extraction
    - Fixed Angel's infinite Ore crash
  Scripting:
    - Massive code rewritting for future features (part2 - Power Drain Pole, Ore Cleaner)
---------------------------------------------------------------------------------------------------
Version: 0.0.43
Date: 1/11/2019
  Major Features:
    - Added the Energy Shield for the Mobile Factory, rechargeable Shield with visual