@@ -1,5 +1,5 @@
 [entity-name]
-MobileFactory=Mobile Factory
+MobileFactory=Base Mobile Factory
 FactoryChest=Factory Internal Chest
 DimensionalOre=Dimensional Ore
 DimensionalFluid=Dimensional Fluid
@@ -41,7 +41,7 @@ InventoryPad=Inventory Pad
 
 
 [entity-description]
-MobileFactory=Your Mobile Factory 
+MobileFactory=A basic Mobile Factory, balanced
 FactoryChest=This chest will retrieve the content of the Mobile Factory chest
 DimensionalOre=A curious ore... Base component
 DimensionalFluid=A high density fluid that liberate an impressive energy
@@ -81,7 +81,7 @@ InventoryPad=A pad used to extend the Internal Inventory, must be placed in the 
 
 
 [item-name]
-MobileFactory=Mobile Factory
+MobileFactory=Base Mobile Factory
 DimensionalOre=Dimensional Ore
 DimensionalSample=Dimensional Sample
 DimensionalPlate=Dimensional Plate
@@ -138,7 +138,7 @@ mfTank-machine-gun=Tank Machine Gun
 
 
 [item-description]
-MobileFactory=Your Mobile Factory 
+MobileFactory=A basic Mobile Factory, balanced
 DimensionalOre=A curious ore... Base component
 DimensionalSample=A sample of Dimensional Ore to analyze in the Analyzer
 DimensionalPlate=A plate melted from Dimensional Ore
