@@ -3,6 +3,7 @@ Version: 0.0.45
 Date: 17/11/2019
   Changes:
     - The Mobile Factory can now be removed and replaced, but it will lose all it's Shield, Energy and Jump Drive charge
+    - Changed the base Mobile Factory vehicle weapon, health, weight, energy consumption, brake power, inventory size, equipment grid size, ...
   Scripting:
     - Rewrite for the placed/removed/destroyed Entities
     - Rewrite for the Mobile Factory object
